--- a/bundler-packages/solc/package.json
+++ b/bundler-packages/solc/package.json
@@ -43,10 +43,6 @@
 		"src"
 	],
 	"scripts": {
-		"test": "vitest --coverage",
-		"test:coverage": "vitest run --coverage",
-		"test:run": "vitest run",
-		"test:ui": "vitest --ui",
 		"all": "pnpm i  && bun run build && bun run lint && bun run lint:check && bun run format:check && bun run format && bun run test:coverage && bun run generate:docs",
 		"build": "nx run-many --targets=build:dist,build:types --projects=@tevm/solc ",
 		"build:dist": "tsup",
@@ -58,7 +54,11 @@
 		"lint": "biome check . --write --unsafe",
 		"lint:check": "biome check . --verbose",
 		"lint:deps": "bunx depcheck",
-		"lint:package": "bunx publint --strict && attw --pack"
+		"lint:package": "bunx publint --strict && attw --pack",
+		"test": "vitest --coverage",
+		"test:coverage": "vitest run --coverage",
+		"test:run": "vitest run",
+		"test:ui": "vitest --ui"
 	},
 	"dependencies": {
 		"@tevm/tsconfig": "workspace:^",
