--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "test:run": "nx run-many --target=test:run",
     "up": "bun x npm-check-updates -ui -ws"
   },
-  "dependencies": {},
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.17.4",
     "@biomejs/biome": "^1.9.4",
@@ -53,6 +52,7 @@
     "@monodon/rust": "^2.1.0",
     "@napi-rs/cli": "3.0.0-alpha.63",
     "@napi-rs/wasm-runtime": "^0.2.4",
+    "@types/node": "^22.13.10",
     "@vitest/coverage-v8": "^3.0.7",
     "@vitest/ui": "^3.0.7",
     "bun-types": "^1.2.4",
@@ -72,7 +72,8 @@
     "typescript": "^5.8.2",
     "vite": "^6.2.0",
     "vitest": "^3.0.7",
-    "vocs": "1.0.1"
+    "vocs": "1.0.1",
+    "zod": "^3.24.2"
   },
   "packageManager": "pnpm@10.6.1+sha512.40ee09af407fa9fbb5fbfb8e1cb40fbb74c0af0c3e10e9224d7b53c7658528615b2c92450e74cfad91e3a2dcafe3ce4050d80bda71d757756d2ce2b66213e9a3",
   "engines": {
