--- a/cli/package.json
+++ b/cli/package.json
@@ -71,6 +71,7 @@
 		"ink-testing-library": "^4.0.0",
 		"prettier": "^3.5.3",
 		"ts-node": "^10.9.2",
+		"tsx": "^4.19.3",
 		"typescript": "^5.8.2",
 		"xo": "^0.60.0"
 	},
