--- a/examples/remix/package.json
+++ b/examples/remix/package.json
@@ -1,25 +1,68 @@
 {
-  "name": "remix",
+  "name": "@tevm/example-remix",
+  "version": "0.0.1",
   "private": true,
+  "contributors": [
+    "Will Cory <willcory10@gmail.com>",
+    "0xpolarzero"
+  ],
   "sideEffects": false,
   "type": "module",
   "scripts": {
+    "all": "bun run format && bun run lint && bun run typecheck && bun run build",
     "build": "remix vite:build",
+    "clean": "rm -rf .cache build",
     "dev": "remix vite:dev",
+    "format": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
+    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toggle": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@remix-run/node": "^2.16.2",
     "@remix-run/react": "^2.16.2",
     "@remix-run/serve": "^2.16.2",
+    "@shazow/whatsabi": "^0.20.0",
+    "@tanstack/react-table": "^8.21.2",
+    "@tevm/jsonrpc": "workspace:^",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "isbot": "^4.1.0",
+    "lucide-react": "^0.482.0",
+    "next-themes": "^0.4.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-use": "^17.6.0",
+    "sonner": "^2.0.1",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
+    "tevm": "workspace:^",
+    "vaul": "^1.1.2",
+    "viem": "^2.23.11",
+    "web-streams-polyfill": "^4.1.0",
+    "zod": "^3.24.2",
+    "zustand": "5.0.3"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@remix-run/dev": "^2.16.2",
+    "@types/node": "^22.13.10",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
@@ -32,8 +75,10 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.38",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.1.6",
+    "typescript": "^5.8.2",
     "vite": "^6.0.0",
     "vite-tsconfig-paths": "^4.2.1"
   },
