--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,29 @@
 version: '3'
 
 services:
-  resolutions-test:
-    image: node:18-alpine
+  go-builder:
+    image: golang:1.19
     volumes:
       - .:/app
-      - node_modules:/app/node_modules
     working_dir: /app
-    command: /bin/sh -c "cd resolutions-test && npm install && npm run test:with-cli"
+    command: >
+      bash -c "cd resolutions-go && 
+      mkdir -p bin && 
+      go mod init github.com/williamcory/tevm/go-claude/resolutions-go && 
+      go mod tidy && 
+      go build -o bin/cli cmd/cli/main.go"
+
+  resolutions-test:
+    image: node:18
+    volumes:
+      - .:/app
+    working_dir: /app
+    command: >
+      bash -c "cd resolutions-go && 
+      ls -la bin && 
+      cd ../resolutions-test && 
+      npm install && 
+      chmod +x ./scripts/*.sh && 
+      PATH=$PATH:/app/resolutions-go/bin sh ./scripts/run-tests.sh"
     depends_on:
       - go-builder
-
-  go-builder:
-    image: golang:1.19-alpine
-    volumes:
-      - .:/app
-    working_dir: /app
-    command: /bin/sh -c "cd resolutions-go && go build -o bin/cli cmd/cli/main.go"
-
-volumes:
-  node_modules:
