--- a/docs/node/package.json
+++ b/docs/node/package.json
@@ -11,19 +11,19 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.15",
+    "@tailwindcss/vite": "^4.0.15", 
     "ethers": "^6.13.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^4.0.15",
     "tevm": "workspace:^",
     "viem": "^2.23.9",
     "vitest": "^3.0.9",
-    "vocs": "1.0.11"
+    "vocs": "1.0.0-alpha.62"
   },
   "devDependencies": {
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "typescript": "^5.8.2"
   },
   "peerDependencies": {
