--- a/docs/node/package.json
+++ b/docs/node/package.json
@@ -11,19 +11,19 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.15", 
+    "@tailwindcss/vite": "^4.0.17",
     "ethers": "^6.13.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^4.0.15",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.0.17",
     "tevm": "workspace:^",
-    "viem": "^2.23.9",
-    "vitest": "^3.0.9",
-    "vocs": "1.0.0-alpha.62"
+    "viem": "^2.24.3",
+    "vitest": "^3.1.1",
+    "vocs": "1.0.11"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "typescript": "^5.8.2"
   },
   "peerDependencies": {
