--- a/bundler-packages/resolutions-rs/package.json
+++ b/bundler-packages/resolutions-rs/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@tevm/resolutions-rs",
   "version": "0.0.0",
+  "type": "module",
   "main": "index.js",
   "types": "index.d.ts",
   "napi": {
