--- a/bundler-packages/resolutions-rs/Cargo.toml
+++ b/bundler-packages/resolutions-rs/Cargo.toml
@@ -9,6 +9,8 @@ napi = { version = '2.10.2', default-features = false, features = [
 	'napi4',
 ] }
 napi-derive = '2.9.3'
+node-resolve = "2.2.0"
+once_cell = "1.21.3"
 regex = "1.11.1"
 
 [lib]
