--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -8,6 +8,7 @@
   "updateInternalDependencies": "patch",
   "ignore": [
     "@tevm/example*",
+    "@tevm/resolutions-rs*",
     "@tevm/node-docs",
     "svelte-ethers",
     "mdt-repro",
