--- a/bundler-packages/resolutions-rs/Cargo.toml
+++ b/bundler-packages/resolutions-rs/Cargo.toml
@@ -8,11 +8,17 @@ edition = '2021'
 node-resolve = "2.2.0"
 once_cell = "1.21.3"
 regex = "1.11.1"
+serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.140"
 tempfile = "3.19.1"
+
+[[bin]]
+name = "benchmark_helper"
+path = "src/bin/benchmark_helper.rs"
 
 [lib]
 crate-type = [
 	'cdylib',
+	'rlib',
 ]
 
