--- a/bundler-packages/resolutions-rs/package.json
+++ b/bundler-packages/resolutions-rs/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@tevm/resolutions": "workspace:^",
-    "effect": "^3.14.10"
+    "effect": "3.13.2"
   },
   "devDependencies": {
     "vitest": "^1.0.0"
