--- a/bundler-packages/resolutions-rs/Cargo.toml
+++ b/bundler-packages/resolutions-rs/Cargo.toml
@@ -1,4 +1,3 @@
-
 [package]
 name = '_tevm_bundler_packages_rs'
 version = '0.1.0'
@@ -11,6 +10,8 @@ regex = "1.11.1"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.140"
 tempfile = "3.19.1"
+napi = { version = "2.15.0", default-features = false, features = ["napi4"] }
+napi-derive = "2.15.0"
 
 [[bin]]
 name = "benchmark_helper"
@@ -18,7 +19,9 @@ path = "src/bin/benchmark_helper.rs"
 
 [lib]
 crate-type = [
-	'cdylib',
-	'rlib',
+    'cdylib',
+    'rlib',
 ]
 
+[build-dependencies]
+napi-build = "2.0.1"
