--- a/bundler-packages/resolutions-rs/Cargo.toml
+++ b/bundler-packages/resolutions-rs/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = '_tevm_bundler_packages_rs'
+name = 'tevm_resolutions_rs'
 version = '0.1.0'
 edition = '2021'
 
@@ -10,10 +10,6 @@ regex = "1.11.1"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.140"
 tempfile = "3.19.1"
-
-[[bin]]
-name = "benchmark_helper"
-path = "src/bin/benchmark_helper.rs"
 
 [lib]
 crate-type = [
