--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "type": "commonjs",
   "scripts": {
-    "all": "nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app",
+    "all": "nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app,build:rust",
     "all:clean": "bun clean && pnpm i && bun allz",
     "all:slow": "nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app --parallel=1",
     "allz": "concurrently 'pnpm i' 'bun lint' 'bun sort-package-json' && nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app,lint:package,lint:deps,lint,format,build:rust:lib",
@@ -51,7 +51,7 @@
     "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.28.1",
     "@effect/codemod": "^0.0.16",
-    "@monodon/rust": "^2.1.0",
+    "@monodon/rust": "^2.2.0",
     "@napi-rs/cli": "3.0.0-alpha.63",
     "@napi-rs/wasm-runtime": "^0.2.4",
     "@vitest/coverage-v8": "^3.0.7",
