--- a/bundler-packages/solc-rs/package.json
+++ b/bundler-packages/solc-rs/package.json
@@ -1,29 +1,7 @@
 {
-  "name": "@tevm/resolutions-rs",
+  "name": "@tevm/solc-rs",
   "version": "0.1.0",
   "private": true,
-  "description": "Rust implementation of solidity resolution",
-  "type": "module",
-  "main": "index.js",
-  "types": "index.d.ts",
-  "scripts": {
-    "benchmark": "vitest bench",
-    "build": "napi build --release",
-    "build:debug": "napi build",
-    "prepublishOnly": "napi prepublish -t npm"
-  },
-  "napi": {
-    "binaryName": "tevm_solc_rs",
-    "packageName": "@tevm/solc-rs",
-    "targets": [
-      "aarch64-apple-darwin",
-      "aarch64-unknown-linux-gnu",
-      "aarch64-unknown-linux-musl",
-      "aarch64-pc-windows-msvc",
-      "x86_64-unknown-linux-musl",
-      "x86_64-apple-darwin",
-      "i686-pc-windows-msvc",
-      "wasm32-wasip1-threads"
-    ]
-  }
+  "description": "Rust wrapper for the Solidity compiler (solc)",
+  "type": "module"
 }
