--- a/bundler-packages/resolutions-rs/Cargo.toml
+++ b/bundler-packages/resolutions-rs/Cargo.toml
@@ -4,12 +4,18 @@ version = '0.1.0'
 edition = '2021'
 
 [dependencies]
+futures = "0.3.31"
 node-resolve = "2.2.0"
 once_cell = "1.21.3"
 regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 tempfile = "3.19.1"
+tokio = { version = "1.44.2", features =[
+    "rt-multi-thread",
+    "macros",
+    "fs",
+]}
 
 [lib]
 crate-type = [
