--- a/bundler-packages/resolutions-rs/Cargo.toml
+++ b/bundler-packages/resolutions-rs/Cargo.toml
@@ -10,6 +10,7 @@ once_cell = "1.21.3"
 regex = "1.11.1"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.140"
+solar = { version = "0.1.2", package = "solar-compiler" }
 tempfile = "3.19.1"
 tokio = { version = "1.44.2", features =[
     "rt-multi-thread",
