--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@tanstack/react-query": "^5.66.9",
     "@tanstack/svelte-query": "^5.66.9",
@@ -20,6 +21,7 @@
     "@tauri-apps/plugin-opener": "^2.2.5",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "monaco-editor": "^0.52.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tevm": "workspace:^",
