--- a/bundler-packages/resolutions-rs/Cargo.toml
+++ b/bundler-packages/resolutions-rs/Cargo.toml
@@ -14,12 +14,14 @@ tokio = { version = "1.44.2", features = [
     "macros",
     "fs",
 ]}
+dashmap = "5.5.1"
 
 # Node module resolution
 node-resolve = "2.2.0"
 
 # Utilities
 once_cell = "1.21.3"
+num_cpus = "1.16.0"
 regex = "1.11.1"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.140"
@@ -29,8 +31,8 @@ solar = { version = "0.1.2", package = "solar-compiler" }
 tempfile = "3.19.1"
 
 # NAPI bindings
-napi = { version = "2.12.2", default-features = false, features = ["napi4", "tokio_rt", "serde-json", "compat-mode"] }
-napi-derive = "2.12.2"
+napi = { version = "2.16.0", default-features = false, features = ["napi4", "tokio_rt", "serde-json", "compat-mode", "async", "napi8"] }
+napi-derive = "2.16.0"
 
 [build-dependencies]
 napi-build = "2.0.1"
