--- a/bundler-packages/resolutions-rs/Cargo.toml
+++ b/bundler-packages/resolutions-rs/Cargo.toml
@@ -33,6 +33,7 @@ tempfile = "3.19.1"
 # NAPI bindings
 napi = { version = "2.16.0", default-features = false, features = ["napi4", "tokio_rt", "serde-json", "compat-mode", "async", "napi8"] }
 napi-derive = "2.16.0"
+libc = "0.2.172"
 
 [build-dependencies]
 napi-build = "2.0.1"
