--- a/bundler-packages/resolutions-rs/Cargo.toml
+++ b/bundler-packages/resolutions-rs/Cargo.toml
@@ -34,6 +34,7 @@ tempfile = "3.19.1"
 napi = { version = "2.16.0", default-features = false, features = ["napi4", "tokio_rt", "serde-json", "compat-mode", "async", "napi8"] }
 napi-derive = "2.16.0"
 libc = "0.2.172"
+tokio-stream = "0.1.17"
 
 [build-dependencies]
 napi-build = "2.0.1"
