--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -66,7 +66,11 @@
   },
   "dependencies": {
     "@tevm/errors": "workspace:^",
-    "@tevm/utils": "workspace:^"
+    "@tevm/utils": "workspace:^",
+    "@tevm/evm": "workspace:^",
+    "@tevm/memory-client": "workspace:^",
+    "@tevm/solc": "workspace:^",
+    "viem": "^2.28.0"
   },
   "devDependencies": {
     "@evmts/core": "1.0.0-next.12",
