feat: Implement runtime-rs package

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@
 resolver = '2'
 members = [
 	'bundler-packages/resolutions-rs',
+	'bundler-packages/runtime-rs',
 	'bundler-packages/solc-rs',
 	'app/src-tauri',
 ]
