--- a/bundler-packages/resolutions-rs/package.json
+++ b/bundler-packages/resolutions-rs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tevm/resolutions-rs",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "description": "Rust implementation of solidity resolution",
   "type": "commonjs",
   "main": "index.js",
@@ -15,6 +15,7 @@
   "scripts": {
     "build": "napi build --platform --release",
     "build:debug": "napi build",
+    "build:release": "napi build --platform --release --target aarch64-apple-darwin aarch64-unknown-linux-gnu aarch64-unknown-linux-musl aarch64-pc-windows-msvc x86_64-unknown-linux-musl x86_64-apple-darwin i686-pc-windows-msvc wasm32-wasip1-threads",
     "prepublishOnly": "napi prepublish -t npm",
     "test": "node test/index.js",
     "example": "node examples/usage.js"
