--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,6 +2,7 @@ packages:
   - app
   - bundler-packages/*
   - bundler-packages/resolutions-rs/npm/*
+  - bundler-packages/runtime-rs/npm/*
   - bundler
   - configs/*
   - cli
