--- a/docs/revm/package.json
+++ b/docs/revm/package.json
@@ -7,6 +7,7 @@
     "dev": "vocs dev",
     "build": "bun build:app",
     "build:app": "vocs build",
+    "build:app:force": "VOCS_IGNORE_DEADLINKS=true vocs build || true",
     "preview": "vocs preview",
     "test": "vitest"
   },
