chore: Migrate state to effect

--- a/packages/state/package.json
+++ b/packages/state/package.json
@@ -70,6 +70,7 @@
     "@tevm/logger": "workspace:^",
     "@tevm/test-utils": "workspace:^",
     "@tevm/utils": "workspace:^",
+    "effect": "^3.14.14",
     "ethereum-cryptography": "^3.1.0"
   },
   "devDependencies": {
