--- a/packages/ox/tsconfig.json
+++ b/packages/ox/tsconfig.json
@@ -3,12 +3,15 @@
 	"compilerOptions": {
 		"rootDir": "src",
 		"outDir": "types",
-		"moduleResolution": "bundler",
+		"moduleResolution": "NodeNext",
 		"module": "NodeNext",
 		"checkJs": true,
 		"declaration": true,
 		"declarationMap": true,
-		"emitDeclarationOnly": true
+		"emitDeclarationOnly": true,
+		"paths": {
+			"ox/core/*": ["./node_modules/ox/dist/core/*"]
+		}
 	},
 	"include": ["src"],
 	"exclude": ["node_modules", "**/*.spec.ts", "dist", "types"]
