--- a/bundler-packages/bundler-rs/package.json
+++ b/bundler-packages/bundler-rs/package.json
@@ -3,22 +3,28 @@
   "version": "0.1.0",
   "private": false,
   "description": "Rust implementation of Tevm bundler",
-  "type": "commonjs",
-  "main": "index.js",
-  "types": "index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/evmts/tevm-monorepo.git",
     "directory": "bundler-packages/bundler-rs"
   },
   "license": "MIT",
+  "type": "commonjs",
+  "main": "index.js",
+  "types": "index.d.ts",
+  "files": [
+    "index.js",
+    "index.d.ts",
+    "browser.js",
+    "README.md"
+  ],
   "scripts": {
     "build": "napi build --platform --release",
     "build:debug": "napi build",
     "build:release": "napi build --platform --release --target aarch64-apple-darwin aarch64-unknown-linux-gnu aarch64-unknown-linux-musl aarch64-pc-windows-msvc x86_64-unknown-linux-musl x86_64-apple-darwin i686-pc-windows-msvc wasm32-wasip1-threads",
+    "example": "node examples/usage.js",
     "prepublishOnly": "napi prepublish -t npm",
-    "test": "node test/index.js",
-    "example": "node examples/usage.js"
+    "test": "node test/index.js"
   },
   "devDependencies": {
     "@napi-rs/cli": "^2.15.2"
@@ -39,11 +45,5 @@
       "i686-pc-windows-msvc",
       "wasm32-wasip1-threads"
     ]
-  },
-  "files": [
-    "index.js",
-    "index.d.ts",
-    "browser.js",
-    "README.md"
-  ]
+  }
 }
