--- a/packages/revm/Cargo.toml
+++ b/packages/revm/Cargo.toml
@@ -17,6 +17,11 @@ wasm-bindgen = "0.2.92"
 console_error_panic_hook = { version = "0.1.7", optional = true }
 web-sys = { version = "0.3.69", features = ["console"] }
 js-sys = "0.3.69"
+revm = { version = "3.5.0", features = ["std", "serde"], default-features = false }
+bytes = "1.5.0"
+hex = "0.4.3"
+primitive-types = { version = "0.12.2", features = ["serde"] }
+getrandom = { version = "0.2", features = ["js"] }
 
 [lib]
 crate-type = [
