fix: clean script

--- a/tevm/package.json
+++ b/tevm/package.json
@@ -405,7 +405,7 @@
     "build": "nx run-many --targets=build:dist,build:types --projects=tevm",
     "build:dist": "bun run generate:dist && git status --porcelain",
     "build:types": "bun run generate:types && git status --porcelain",
-    "clean": "rm -rf node_modules && rm -rf artifacts && rm -rf dist && rm -rf cache && rm **/*.js **/*.d.ts **/*.d.cts **/*.cjs **/*.cjs.map **/*.ts.map **/*.js.map",
+    "clean": "rm -rf node_modules && rm -rf artifacts && rm -rf dist && rm -rf cache && rm **/*.js **/*.d.ts **/*.d.cts **/*.cjs **/*.cjs.map",
     "generate": "nx run-many --targets=generate:dist,generate:types --projects=tevm && bun generate:docs",
     "generate:dist": "tsup",
     "generate:docs": "typedoc",
