fix: pnpm up latest

--- a/package.json
+++ b/package.json
@@ -47,45 +47,45 @@
   },
   "dependencies": {
     "@sveltejs/adapter-static": "^3.0.8",
-    "@sveltejs/kit": "^2.20.7",
+    "@sveltejs/kit": "^2.20.8",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@tanstack/svelte-query": "^5.74.4",
+    "@tanstack/svelte-query": "^5.75.0",
     "app": "^0.1.0",
-    "svelte": "^5.0.0-next.81",
-    "svelte-check": "^4.1.6"
+    "svelte": "^5.28.2",
+    "svelte-check": "^4.1.7"
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.17.4",
     "@biomejs/biome": "^1.9.4",
     "@changesets/changelog-github": "^0.5.1",
-    "@changesets/cli": "^2.28.1",
+    "@changesets/cli": "^2.29.2",
     "@effect/codemod": "^0.0.16",
-    "@monodon/rust": "^2.2.0",
+    "@monodon/rust": "^2.3.0",
     "@napi-rs/cli": "3.0.0-alpha.63",
-    "@napi-rs/wasm-runtime": "^0.2.4",
-    "@vitest/coverage-v8": "^3.0.7",
-    "@vitest/ui": "^3.0.7",
+    "@napi-rs/wasm-runtime": "^0.2.9",
+    "@vitest/coverage-v8": "^3.1.2",
+    "@vitest/ui": "^3.1.2",
     "abitype": "^1.0.8",
-    "bun-types": "^1.2.4",
+    "bun-types": "^1.2.11",
     "concurrently": "^9.1.2",
     "depcheck": "^1.4.7",
-    "dotenv": "^16.4.7",
-    "emnapi": "^1.1.0",
-    "gitmoji-cli": "^9.5.0",
-    "glob": "^11.0.1",
-    "jscodeshift": "^17.1.2",
+    "dotenv": "^16.5.0",
+    "emnapi": "^1.4.3",
+    "gitmoji-cli": "^9.6.0",
+    "glob": "^11.0.2",
+    "jscodeshift": "^17.3.0",
     "mkdirp": "^3.0.1",
-    "nx": "20.4.6",
-    "publint": "^0.3.7",
-    "sort-package-json": "^2.15.1",
-    "starlight-typedoc": "^0.20.0",
+    "nx": "20.8.1",
+    "publint": "^0.3.12",
+    "sort-package-json": "^3.1.0",
+    "starlight-typedoc": "^0.21.1",
     "tsup": "^8.4.0",
-    "typedoc": "^0.27.9",
-    "typedoc-plugin-markdown": "4.4.2",
-    "typescript": "^5.8.2",
-    "vite": "^6.2.0",
-    "vitest": "^3.0.7",
-    "vocs": "1.0.1"
+    "typedoc": "^0.28.3",
+    "typedoc-plugin-markdown": "4.6.3",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.4",
+    "vitest": "^3.1.2",
+    "vocs": "1.0.11"
   },
   "packageManager": "pnpm@10.6.1+sha512.40ee09af407fa9fbb5fbfb8e1cb40fbb74c0af0c3e10e9224d7b53c7658528615b2c92450e74cfad91e3a2dcafe3ce4050d80bda71d757756d2ce2b66213e9a3",
   "engines": {
