--- a/.github/workflows/nx.yml
+++ b/.github/workflows/nx.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
   workflow_dispatch:
 
+permissions:
+  actions: read
+  contents: read
+
 env:
   NX_CLOUD_DISTRIBUTED_EXECUTION: true
   # give extra memory to speed up a bit
@@ -17,29 +21,10 @@ env:
   TEVM_RPC_URLS_OPTIMISM: ${{ secrets.TEVM_RPC_URLS_OPTIMISM }}
 
 jobs:
-  agents:
+  ci:
     name: Nx Cloud Agents
     runs-on: ubuntu-latest
-    timeout-minutes: 15
-    strategy:
-      matrix:
-        agent: [1, 2, 3, 4, 5, 6]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version-file: ".nvmrc"
-          registry-url: https://registry.npmjs.org
-      - name: "Setup"
-        uses: ./.github/actions/setup
-      - name: Start Nx Agent ${{ matrix.agent }}
-        run: bunx nx-cloud start-agent
-        env:
-          NX_AGENT_NAME: ${{ matrix.agent }}
-  main:
-    name: Nx Cloud - Main Job
-    runs-on: ubuntu-latest
+    timeout-minutes: 20
     steps:
       - uses: actions/checkout@v4
         name: Checkout [Pull Request]
@@ -47,36 +32,14 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
-
       - uses: actions/checkout@v4
         name: Checkout [Default Branch]
         if: ${{ github.event_name != 'pull_request' }}
         with:
           fetch-depth: 0
-
       - name: "Setup"
         uses: ./.github/actions/setup
-
-      - name: Initialize the Nx Cloud distributed CI run and stop agents when the build tasks are done
-        run: bunx nx-cloud start-ci-run --stop-agents-after=build:app --stop-agents-on-failure=false
-
-      - name: Run verification
-        uses: JamesHenry/parallel-bash-commands@v1.0
-        with:
-          cmd1: bunx nx affected --targets build:dist,build:rust
-          cmd2: bunx nx affected --target build:types
-          cmd3: bunx nx affected --target typecheck
-          cmd4: bunx nx affected --target test:coverage
-          cmd5: bunx nx affected --target lint:check && bun sort-package-json:check
-          cmd6: bunx nx affected --target lint:deps
-          cmd7: bunx nx run-many --target lint:package
-          cmd8: bunx nx affected --target dev:run
-          cmd9: bunx nx affected --target generate:docs
-          cmd10: bunx nx affected --target build:app
-
-      - name: Stop agents
-        run: bunx nx-cloud stop-all-agents
-
-      - name: Tag main branch if all jobs succeed
-        if: ${{ github.event_name != 'pull_request' }}
-        uses: nrwl/nx-tag-successful-ci-run@v1
+      - run: npx nx-cloud start-ci-run --distribute-on="9 linux-medium-js"
+      - uses: nrwl/nx-set-shas@v4
+      - run: bunx nx affected --targets build:dist,build:rust,build:types,typecheck,test:coverage,lint:check,lint:deps,lint:package,dev:run,generate:docs,build:app
+      - run: bun sort-package-json:check
