--- a/bundler-packages/resolutions-rs/project.json
+++ b/bundler-packages/resolutions-rs/project.json
@@ -1,37 +1,37 @@
 {
-	"name": "tevm_resolutions_rs",
-	"$schema": "../../node_modules/nx/schemas/project-schema.json",
-	"projectType": "library",
-	"sourceRoot": "bundler-packages/resolutions-rs/src",
-	"tags": [],
-	"targets": {
-		"build:rust": {
-			"cache": true,
-			"outputs": ["{workspaceRoot}/bundler-packages/resolutions-rs"],
-			"executor": "@monodon/rust:napi",
-			"options": {
-				"dist": "dist/resolutions-rs",
-				"jsFile": "index.js"
-			},
-			"configurations": {
-				"production": {
-					"dist": "dist/resolutions-rs",
-					"release": true
-				}
-			}
-		},
-		"test:coverage": {
-			"cache": true,
-			"executor": "@monodon/rust:test",
-			"outputs": ["{options.target-dir}"],
-			"options": {
-				"target-dir": "dist/target/resolutions-rs"
-			},
-			"configurations": {
-				"production": {
-					"release": true
-				}
-			}
-		}
-	}
+  "name": "tevm_resolutions_rs",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
+  "projectType": "library",
+  "sourceRoot": "bundler-packages/resolutions-rs/src",
+  "tags": [],
+  "targets": {
+    "build:rust": {
+      "cache": false,
+      "outputs": ["{workspaceRoot}/bundler-packages/resolutions-rs"],
+      "executor": "@monodon/rust:napi",
+      "options": {
+        "dist": "dist/resolutions-rs",
+        "jsFile": "index.js"
+      },
+      "configurations": {
+        "production": {
+          "dist": "dist/resolutions-rs",
+          "release": true
+        }
+      }
+    },
+    "test:coverage": {
+      "cache": false,
+      "executor": "@monodon/rust:test",
+      "outputs": ["{options.target-dir}"],
+      "options": {
+        "target-dir": "dist/target/resolutions-rs"
+      },
+      "configurations": {
+        "production": {
+          "release": true
+        }
+      }
+    }
+  }
 }
