--- a/.github/workflows/nx.yml
+++ b/.github/workflows/nx.yml
@@ -23,7 +23,7 @@ jobs:
     timeout-minutes: 15
     strategy:
       matrix:
-        agent: [1, 2, 3, 4, 5, 6, 7, 8, 9]
+        agent: [1, 2, 3, 4]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -60,8 +60,9 @@ jobs:
       - name: Build rust
         uses: JamesHenry/parallel-bash-commands@v1.0
         with:
-          cmd1: bunx nx affected --target build:rust
+          cmd1: bunx nx run-many --target build:rust
           cmd2: bun sort-package-json:check
+          cmd3: bunx nx run-many --target lint:package
 
       - name: Initialize the Nx Cloud distributed CI run and stop agents when the build tasks are done
         run: bunx nx-cloud start-ci-run --stop-agents-on-failure=false
@@ -76,9 +77,8 @@ jobs:
           cmd5: bunx nx affected --target test:coverage
           cmd6: bunx nx affected --target lint:check
           cmd7: bunx nx affected --target lint:deps
-          cmd8: bunx nx run-many --target lint:package
-          cmd9: bunx nx affected --target dev:run
-          cmd10: bunx nx affected --targets build:typecheck
+          cmd8: bunx nx affected --target dev:run
+          cmd9: bunx nx affected --targets build:typecheck
 
       - name: Stop agents
         run: bunx nx-cloud stop-all-agents
