--- a/.github/workflows/nx.yml
+++ b/.github/workflows/nx.yml
@@ -57,6 +57,11 @@ jobs:
       - name: "Setup"
         uses: ./.github/actions/setup
 
+      - name: Install native dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pkg-config libglib2.0-dev
+
       - name: Initialize the Nx Cloud distributed CI run and stop agents when the build tasks are done
         run: bunx nx-cloud start-ci-run --stop-agents-after=build:app --stop-agents-on-failure=false
 
