--- a/.github/workflows/nx.yml
+++ b/.github/workflows/nx.yml
@@ -33,6 +33,16 @@ jobs:
           registry-url: https://registry.npmjs.org
       - name: "Setup"
         uses: ./.github/actions/setup
+      - name: Install native dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            pkg-config \
+            libglib2.0-dev \
+            libgtk-3-dev \
+            libwebkit2gtk-4.1-dev \
+            libayatana-appindicator3-dev \
+            librsvg2-dev
       - name: Start Nx Agent ${{ matrix.agent }}
         run: bunx nx-cloud start-agent
         env:
