--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -2,6 +2,11 @@ name: Setup
 runs:
   using: composite
   steps:
+    - name: Install Zig
+      uses: goto-bus-stop/setup-zig@v2
+      with:
+        version: 0.14.0
+
     - uses: actions/setup-node@v3
       with:
         node-version-file: ".nvmrc"
